[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klipper-backup-manager"
dynamic = ["version"]
description = 'A set of tools for managing, creating, and restoring backups of configurations, customizations, and gcodes for Klipper-based 3D printing setups.'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ['klipper','3d printing','backup']
authors = [
  { name = "Laurel Ash", email = "laurel.ash@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['click', 'cloup', 'tqdm']

[project.urls]
Documentation = "https://github.com/venus-de-lmao/klipper-backup-manager#readme"
Issues = "https://github.com/venus-de-lmao/klipper-backup-manager/issues"
Source = "https://github.com/venus-de-lmao/klipper-backup-manager"



[tool.hatch.version]
path = "src/klipper_backup_manager/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-cov",
  "pytest-watcher"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "__pycache__", ".pytest_cache", ".git*", "tests"
]

[tool.hatch.build.targets.wheel]
exclude = [
  "__pycache__", ".pytest_cache", ".git*"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/klipper_backup_manager tests}"

[tool.coverage.run]
source_pkgs = ["klipper_backup_manager", "tests"]
branch = true
parallel = true
omit = [
  "src/klipper_backup_manager/__about__.py",
]

[tool.coverage.paths]
klipper_backup_manager = ["src/klipper_backup_manager", "*/klipper-backup-manager/src/klipper_backup_manager"]
tests = ["tests", "*/klipper-backup-manager/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
